Sun Aug 13 23:17:30 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Server.h, htdig/Server.cc (Server): Add support for
	per-server user_agent configuration.

	* htdig/Document.cc (Retrieve): Ditto.
	
	* httools/htpurge.cc (purgeDocs): Set remove_* attributes on a
	per-server basis.

	* htcommon/defaults.cc: Fix remove_bad_urls and
	remove_unretrieved_urls to point to htpurge and not htmerge.

Sat Aug 12 23:03:32 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdoc/cf_generate.pl (html_escape): Fix mindless thinko with
	perl stringwise-equal operator. Documentation is now generated
	with block: portion appropriate to defaults.cc.

	* htdoc/attrs.html, cf_by{name,prog}.html: Reran cf_generate.pl.

Fri Aug 11 16:03:18 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc (parse): fix problem with &amp; not being translated.

Fri Aug 11 10:48:54 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc (setVariables), htcommon/defaults.cc: Added
	maximum_page_buttons attribute, to limit buttons to less than
	maximum_pages.  Fixes PR#731 & PR#781.
	* htdoc/attrs.html, cf_by{name,prog}.html: reran cf_generate.pl

Wed Aug  9 23:04:39 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* httools/htmerge.cc (mergeDB): Add fix to prevent duplicate
	documents when you merge a database with a copy of itself
	contributed by Lorenzo.

Wed Aug  9 22:58:39 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/parser.cc (score): Merged in patch contributed by
	Lorenzo Campedelli <lorenzo.campedelli@libero.it> and Arthur
	Prokosch <prokosch@aptima.com> to fix problems with AND operators
	and phrase matches.

Wed Aug  2 11:44:11 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc (setVariables), htcommon/defaults.cc: Enhanced
	build_select_lists attribute, to generate not only single-choice
	select lists, but also select multiple lists, radio button lists