@@ -1,0 +1,26 @@
+#
+# db.conf file for the multidig system
+#  (copied for each database used)
+#
+# Copyright (c) 1998-1999 The ht://Dig Group
+# Distributed under the terms of the GNU General Public License (GPL)
+#   version 2 or later.
+# for the ht://Dig search system http://www.htdig.org/
+# and the multidig script system http://www.htdig.org/contrib/scripts/
+#
+
+# Change this if you use a different global config file
+# Put most of your configuration options in this file
+#  the db.conf files only define the URL list used and the directory for
+#  storing the databases
+include:		${config_dir}/htdig.conf
+
+# Changed for each database. Places the databases in separate directories
+# for convenience and organization
+database_dir:		@DB_BASE@/@DATABASE@
+
+# Each database has a separate list of starting URLs
+# This makes it easier to index a variety of categories
+start_url:		`${database_dir}/@DATABASE@.urls`
+
+# Any database-specific config options should go here...
