@@ -1,0 +1,32 @@
+#!@BASH@
+#
+# multidig config 1.1
+#
+# Copyright (c) 1998-1999 The ht://Dig Group
+# Distributed under the terms of the GNU General Public License (GPL)
+#   version 2 or later.
+# for the ht://Dig search system http://www.htdig.org/
+# and the multidig script system http://www.htdig.org/contrib/scripts/
+#
+
+# You may wish to set some of these:
+# BASEDIR = base directory for ht://Dig installation
+# BINDIR = directory with ht://Dig binaries (i.e. htdig, htmerge)
+# DB_BASE = base directory for ht://Dig DB
+# (i.e. each DB gets its own directory off of this)
+# CONFIG_DIR = directory with ht://Dig config files
+# DB_LIST = file with list of databases
+# COLLECT_LIST = file with list of "collections" databases merged from others
+# DB_CONF = file copied by new-db and new-collect for .conf files
+# REPORT = temporary file used to generate a report for the dig
+# TMPDIR = a directory with lots of temporary space for the merging
+export BASEDIR=@BASEDIR@
+export BINDIR=@BINDIR@
+export DB_BASE=@DB_BASE@
+export CONFIG_DIR=@CONFIG_DIR@
+export DB_LIST=$CONFIG_DIR/db.list
+export COLLECT_LIST=$CONFIG_DIR/collect.list
+export DB_CONF=$CONFIG_DIR/db.conf
+export REPORT=$BASEDIR/multidig.report
+export TMPDIR=$DB_BASE
+export BACKUPS=true
